<resources>
    <string name="app_name">SPRINT_1_EVOTECH</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="n_o_tem_uma_conta_cadastre_se_agora">Não tem uma conta? Cadastre-se agora!</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="digite_sua_senha">digite sua senha</string>
    <string name="digite_seu_login">digite seu email</string>
    <string name="login">Email</string>
    <string name="usuario_nao_encontrado">Usuário não encontrado!</string>
    <string name="usuario_encontrado">Usuário encontrado com sucesso!</string>
    <string name="digite_seu_nome">digite seu nome</string>
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="registro_sucesso">Registro realizado com sucesso!</string>
    <string name="registro_erro">Por favor, preencha todos os campos.</string>
    <string name="email">Email</string>
    <string name="enviar_email_de_recupera_o">Enviar email de recuperação</string>
    <string name="erro_email_invalido">Por favor, insira um e-mail válido.</string>
    <string name="login_vazio">O email está vazio!</string>
    <string name="email_enviado">Um link foi enviado ao seu email cadastrado!</string>
    <string name="voltar">Voltar</string>
    <string name="goBack"><![CDATA[<]]></string>
    <string name="in_cio">Início</string>
    <string name="autentica_o_via_faceid">Autenticação Via FaceID</string>
    <string name="notifica_es">Notificações</string>
    <string name="informa_es_pessoais">Informações Pessoais</string>
    <string name="senha_de_acesso">Senha de Acesso</string>
    <string name="informa_es_gerais">Informações Gerais</string>
    <string name="geral">Geral</string>
    <string name="nome_de_usu_rio">Nome de usuário</string>
    <string name="senhas_nao_coincidem">A senha não coincide com a confirmação!</string>
    <string name="preencha_todos_campos">Por favor, preencha todos os campos.</string>
    <string name="sair">Sair</string>

</resources>